kserve/overlays/service-mesh/grpc-authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: kserve-predicator
  namespace: istio-system
spec:
  action: CUSTOM
  provider:
    name: opendatahub-odh-auth-provider
  rules:
  - to:
    - operation:
        notPaths:
        - /healthz*
        ports:
        - "8013"
  selector:
    matchLabels:
      component: predictor
